# shrink-ray

./: .editorconfig  .gitignore  Cargo.toml  flake.nix  rustfmt.toml
src/: comment.rs  context.rs  delta.rs  error.rs  identify.rs  image.rs  main.rs  options.rs  output.rs  stats.rs  temp.rs  terminal.rs  video.rs
src/shrink/: ffmpeg.rs  gm.rs  mod.rs
