[package]
name = "shrink-ray"
version = "0.2.0"
authors = ["Xoddiel d'Croy <xoddiel.dcroy@gmail.com>"]
description = "A utility to shrink your media files"
license = "GPL-3.0-only"
repository = "https://github.com/xoddiel/shrink-ray"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error", "from"] }
filetime = "0.2.23"
magic = "0.16.2"
rand = "0.8.5"
size = "0.4.1"
tokio = { version = "1.35.1", features = ["io-util", "rt-multi-thread", "macros", "process", "fs", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "5.0.0"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.27.1", features = ["signal"] }
